# aws-pii-detection-agent

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_agent.py  setup_dev.py
config/: mcp_config.json  setup_mcp.py
core/: __init__.py  aws_mcp_client.py  masking.py  pii_agent.py
diagrams/: diagram_generator.py
docs/: README.md
servers/: mcp_server_aws.py  mcp_server_orchestrator.py  pii_dashboard.py  run_data_discovery_agent.py
tests/: test_fastmcp_server.py  test_lake_formation_integration.py  test_simple.py
